crates/tests/other-db-tests/src/aurora/snapshots/other_db_tests__aurora__query_tests__sorting__select_order_by_artist_name.snap
---
source: crates/other-db-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Fauré: Requiem, Ravel: Pavane & Others"
      },
      {
        "Name": "The World of Classical Favourites"
      },
      {
        "Name": "Bach: Orchestral Suites Nos. 1 - 4"
      },
      {
        "Name": "Restless and Wild"
      },
      {
        "Name": "Balls to the Wall"
      }
    ]
  }
]
