crates/tests/other-db-tests/src/aurora/snapshots/other_db_tests__aurora__query_tests__sorting__select_order_by_name.snap
---
source: crates/other-db-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Achtung Baby"
      },
      {
        "Title": "A Copland Celebration, Vol. I"
      },
      {
        "Title": "Acústico"
      },
      {
        "Title": "Acústico MTV"
      },
      {
        "Title": "Acústico MTV [Live]"
      }
    ]
  }
]
