crates/tests/other-db-tests/src/aurora/snapshots/other_db_tests__aurora__query_tests__sorting__sorting_by_nested_relationship_column_with_predicate_exists.snap
---
source: crates/tests/other-db-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Balls to the Wall"
      },
      {
        "Name": "Fast As a Shark"
      },
      {
        "Name": "Princess of the Dawn"
      },
      {
        "Name": "Restless and Wild"
      },
      {
        "Name": "\"?\""
      }
    ]
  }
]
